--- a/style.css
+++ b/style.css
@@ -8,32 +8,32 @@
     color: white;
 }
 .Акція{
-    font-family:Molot;
-    src: url(/Molot.otf);
+
     font-size: 40px;
     font-weight:900;
     position:relative;
     left: 43%;
    top:20px;
+   
 }
 .Карусель{
     
 }
 .carousel-item{
-    height: 450x;
-    width: 800px;
-    left: 28%;
+    height: 45%;
+    width: 45%;
+    left: 27%;
    top:20px;
 }
 .carousel-item img{
-    height: 450px;
-    width: 800px;
+    height: 45%;
+    width: 45%;
 }
 .carousel-control-prev{
-    left: 23%;
-    top:40px;
+    left: 22%;
+    top:10%;
 }
 .carousel-control-next{
-    left: 60%;
-    top:40px;
+    left: 61%;
+    top:10%;
 }
